<resources>
    <string name="app_name">News</string>

    <!--Connection-->
    <string name="error_no_internet_connection" translatable="false">@string/noInternet</string>
    <string name="error_timeout" translatable="false">@string/somethingWrong</string>
    <string name="error_unknown_error_occurred" translatable="false">@string/somethingWrong</string>
    <string name="error_server_error" translatable="false">@string/somethingWrong</string>
    <string name="somethingWrong">Sorry, Something went wrong</string>
    <string name="noInternet">No internet connection. Please connect to the internet to be able to use the application</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="welcome">Welcome</string>
    <string name="user_name">Tohami Hussin</string>
    <string name="arrow">arrow</string>
    <string name="explore">Explore</string>
    <string name="chat">Live Chat</string>
    <string name="gallery">Gallery</string>
    <string name="wish_list">Wish List</string>
    <string name="magazine">E-magazine</string>
    <string name="clicked">%s clicked</string>
    <string name="open_website">Open Website</string>
    <string name="likes">Likes(%s)</string>
    <string name="views">%s Views</string>
    <string name="filter">Filter</string>
    <string name="share">Share</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="drawer_news">News</string>
    <string name="drawer_events">Events Calender</string>
    <string name="drawer_map">Innovation Map</string>
    <string name="drawer_leadership">Leadership thoughts</string>
    <string name="drawer_language">Change Language</string>
    <string name="envents_clicked">Events item clicked</string>
    <string name="news_clicked">News item clicked</string>
    <string name="lang_clicked">Language item clicked</string>
    <string name="leadership_clicked">Leadership item clicked</string>
    <string name="maps_clicked">Map item clicked</string>
    <string name="share_article_chooser_header">Share Article</string>
    <string name="filter_clicked">Filter clicked</string>

</resources>
